<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<SwitchPreference
		android:key="swipeback_enable"
		android:title="@string/swipe_enable"
		android:defaultValue="true"/>
	
	<SwitchPreference
		android:key="swipeback_recycle_surface"
		android:title="@string/swipe_recycle_surface"
		android:summary="@string/swipe_recycle_surface_des"
		android:defaultValue="true"
		android:dependency="swipeback_enable"/>
	
	<MultiSelectListPreference
		android:key="swipeback_edge"
		android:title="@string/swipe_edge"
		android:dialogTitle="@string/swipe_edge"
		android:entries="@array/swipe_edges_entries"
		android:entryValues="@array/swipe_edges_values"
		android:defaultValue="@array/swipe_edges_values"
		android:dependency="swipeback_enable"/>
	
	<EditTextPreference
		android:key="swipeback_edge_size"
		android:title="@string/swipe_edge_size"
		android:summary="50 dip"
		android:defaultValue="50"
		android:dependency="swipeback_enable"/>
	
	<us.shandian.mod.swipeback.ui.preference.SeekBarPreference
		android:key="swipeback_sensitivity"
		android:title="@string/swipe_sensitivity"
		monitorBoxEnabled="true"
		monitorBoxUnit="%" 
		android:dependency="swipeback_enable"/>
	
</PreferenceScreen>
